# terminal-buddy

./: .gitignore  CMakeLists.txt  README.md  whispr-flow-npu-reference.md
.env/: dev.env.example
docs/: compatibility-checklist.md  dictation-everywhere-plan.md  managed-terminal-integration.md  npu-feasibility.md  npu-fresh-session-handoff.md  npu-model-export-handoff.md  product-architecture.md  renderer-strategy-research.md  roadmap.md
models/whisper_base_assets/: vocab_by_id.txt
scripts/: fetch-onnxruntime-qnn.ps1
sidecar/: README.md  package-lock.json  package.json  tsconfig.json
sidecar/src/: index.ts
sidecar/src/contracts/: events.ts  protocol.ts  routing.ts  targets.ts  terminal-state.ts
sidecar/src/registry/: target-registry.ts
sidecar/src/router/: intent.ts
sidecar/src/service/: sidecar-service.ts
sidecar/src/state/: cli-terminal-state-adapter.ts  registry-metadata-terminal-state-adapter.ts  terminal-state-adapter.ts
src/: keyboard_emit_win32.c  keyboard_emit_win32.h  keyboard_layout.c  keyboard_layout.h  keyboard_state.c  keyboard_state.h  main.c  managed_terminal.h  managed_terminal_probe.c  managed_terminal_win32.c  owned_terminal_window.c  owned_terminal_window.h  sidecar_client.c  sidecar_client.h  text_engine_probe.c  transcription_backend.c  transcription_backend.h  transcription_backend_npu_win32.c  transcription_backend_openai_win32.c  transcription_probe.c  ui_bubble_widget.c  ui_clay.c  ui_clay.h  ui_clay_internal.h  ui_keyboard_widget.c  ui_panel_widget.c  ui_root.c
